--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather-app",
   "version": "0.1.0",
-  "homepage": "https://LilKalbass.github.io/weather-app",
+  "homepage": "https://lilkalbass.github.io/weather-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -43,6 +43,7 @@
     "axios": "^0.27.2",
     "postcss": "^8.4.14",
     "react-icons": "^4.4.0",
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.1.6",
+    "weather-app": "^1.0.5"
   }
 }
