--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "weather-app -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +41,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
     "react-icons": "^4.4.0",
     "tailwindcss": "^3.1.6",
